Fix : test and merge